crates/pandalang/src/snapshots/pandalang__parser__tests__parses_exprs@bin_op__add_var.panda.snap
---
source: crates/pandalang/src/parser.rs
expression: test_expr(path)
input_file: crates/pandalang/src/snapshot_inputs/exprs/bin_op/add_var.panda
---
Ok(
    BinOp(
        BinOp {
            left: Var(
                Var {
                    name: "a",
                },
            ),
            right: Var(
                Var {
                    name: "b",
                },
            ),
            kind: Add,
        },
    ),
)
