crates/pandalang/src/snapshots/pandalang__parser__tests__parses_exprs@bin_op__prec2.panda.snap
---
source: crates/pandalang/src/parser.rs
expression: test_expr(path)
input_file: crates/pandalang/src/snapshot_inputs/exprs/bin_op/prec2.panda
---
Ok(
    BinOp(
        BinOp {
            left: BinOp(
                BinOp {
                    left: Var(
                        Var {
                            name: "a",
                        },
                    ),
                    right: Var(
                        Var {
                            name: "b",
                        },
                    ),
                    kind: Sub,
                },
            ),
            right: Var(
                Var {
                    name: "c",
                },
            ),
            kind: Add,
        },
    ),
)
