crates/pandalang/src/snapshots/pandalang__parser__tests__parses_exprs@bin_op__prec4.panda.snap
---
source: crates/pandalang/src/parser.rs
expression: test_expr(path)
input_file: crates/pandalang/src/snapshot_inputs/exprs/bin_op/prec4.panda
---
Ok(
    BinOp(
        BinOp {
            left: BinOp(
                BinOp {
                    left: Var(
                        Var {
                            name: "a",
                        },
                    ),
                    right: BinOp(
                        BinOp {
                            left: Var(
                                Var {
                                    name: "b",
                                },
                            ),
                            right: Var(
                                Var {
                                    name: "c",
                                },
                            ),
                            kind: Mul,
                        },
                    ),
                    kind: Add,
                },
            ),
            right: BinOp(
                BinOp {
                    left: Var(
                        Var {
                            name: "d",
                        },
                    ),
                    right: Var(
                        Var {
                            name: "e",
                        },
                    ),
                    kind: Div,
                },
            ),
            kind: Sub,
        },
    ),
)
