crates/pandalang/src/snapshots/pandalang__parser__tests__parses_exprs@bin_op__rem.panda.snap
---
source: crates/pandalang/src/parser.rs
expression: test_expr(path)
input_file: crates/pandalang/src/snapshot_inputs/exprs/bin_op/rem.panda
---
Ok(
    BinOp(
        BinOp {
            left: Int(
                Int {
                    n: 10,
                },
            ),
            right: Int(
                Int {
                    n: 2,
                },
            ),
            kind: Rem,
        },
    ),
)
